fix collapsable functions,  boxImage and twitter message

--- a/src/scss/core/_common.scss
+++ b/src/scss/core/_common.scss
@@ -18,3 +18,7 @@
   overflow: hidden;
   transition: 1s ease height;
 }
+
+.rotate {
+  transform: rotate(180deg);
+}
