--- a/src/scss/layout/_share.scss
+++ b/src/scss/layout/_share.scss
@@ -59,6 +59,7 @@
   font-size: 12px;
   font-weight: 600;
   color: $dull-orange;
+  text-align: center;
 }
 
 .share-twitter {
